# cmake-extras

./: CMakeLists.txt  EnableCoverageReport.cmake
debian/: changelog  control
debian/tests/: intltool
examples/intltool-demo/: CMakeLists.txt
examples/intltool-demo/po/: en_AU.po  intltool-demo.pot
examples/intltool-demo/src/: main.cpp
